Add config.js to .gitignore and create config.example.js template
- Protect Supabase credentials from being committed
- Add config.example.js as template for other developers
- Users should copy config.example.js to config.js and add their credentials

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 # Supabase configuration (contains API keys)
-# Uncomment the line below if you want to prevent committing your credentials
-# config.js
+config.js
 
 # macOS
 .DS_Store
